Fix z-index that prevented from editing values of any input in form.

--- a/src/app/form-container/form-container.component.scss
+++ b/src/app/form-container/form-container.component.scss
@@ -7,9 +7,10 @@
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 1;
 
   .slide-form {
-    z-index: -1;
+    z-index: 0;
     overflow: hidden;
     transform-origin: top;
     transition: opacity,transform;
